<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sintomas">

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/Titulo_sintoma"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="70dp"
    android:layout_marginBottom="60dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <CheckBox
            android:id="@+id/checkBox_1"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_cansado"
            android:text="@string/s_1_Cansado"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawableEnd="@drawable/ic_tonto"
            android:text="@string/s_2_Tonto"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_3"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_insonia"
            android:text="@string/s_3_Insônia"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_4"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_fraqueza"
            android:text="@string/s_4_Fraqueza"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_5"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_falta_apetite"
            android:text="@string/s_5_apetite"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_6"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_febre"
            android:text="@string/s_6_Febre"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_7"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_vontade_de_vomitar"
            android:text="@string/s_7_vomitar"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_8"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_diarreia"
            android:text="@string/s_8_Diarréia"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_9"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_dor_no_estmago"
            android:text="@string/s_9_estômago"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_10"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_sintomas_fortes"
            android:text="@string/s_10_corpo"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_11"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_pele_vermelha"
            android:text="@string/s_11_pele"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_12"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_coceira"
            android:text="@string/s_12_Coceira"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_13"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_tremores"
            android:text="@string/s_13_Tremores"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_14"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_suor_ou_urina_vermelha"
            android:text="@string/s_14_vermelho"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_15"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_tristeza"
            android:text="@string/s_15_Tristeza"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_16"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_sonolencia"
            android:text="@string/s_16_dormir"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>



    </LinearLayout>



</ScrollView>
    <Button
        android:id="@+id/btn_sentimento"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/reg_sintoma"
        android:insetLeft="10dp"
        android:paddingStart="100dp"
        android:text="@string/reg_sintoma"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>