<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sentimento">



    <ImageView
        android:id="@+id/img_sint"
        android:layout_width="379dp"
        android:layout_height="194dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/saralogo"
        android:src="@drawable/im_sintomas_geral"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/tratamento"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:text="@string/tratamento"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <CheckBox
            android:id="@+id/checkBox_1"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_semsintomas"
            android:text="@string/sem_sintoma"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:drawableEnd="@drawable/ic_sintomas_leves"
            android:text="@string/sem_sintoma"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>
        <CheckBox
            android:id="@+id/checkBox_3"
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_sintomas_fortes"
            android:text="@string/sem_sintoma"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="20sp"
            android:layoutDirection="rtl"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_sentimento"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/reg_sintoma"
        android:insetLeft="10dp"
        android:paddingStart="100dp"
        android:text="@string/reg_sintoma"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />







</androidx.constraintlayout.widget.ConstraintLayout>